--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -17,10 +17,23 @@
 .home {
     position: relative;
     width: 100%;
+    height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
+
+    @include mq("1239") {
+        height: 80vh;
+    }
+
+    @include mq("939") {
+        height: 70vh;
+    }
+
+    @include mq("659") {
+        height: 100vh;
+    }
 
     .overlay {
         position: absolute;
@@ -46,7 +59,8 @@
     .homeContent {
         width: 100%;
         height: max-content;
-        padding: 8rem 1.5rem 3rem;
+        padding-left: 0;
+        padding-right: 0;
         display: flex;
         row-gap: 3rem;
         flex-direction: column;
@@ -57,18 +71,43 @@
 
         z-index: 100;
 
+        @include mq("1239") {
+            padding: 8rem 1.5rem 3rem;
+        }
+
         // TextDiv
         .textDiv {
             padding: 2rem 0;
 
             .smallText {
-                font-size: 13px;
+                font-size: fluid-text(13px, 16px);
                 text-transform: uppercase;
             }
 
             .homeTitle {
                 position: relative;
-                font-size: 1.8rem;
+                font-size: fluid-text(28.8px, 36.8px);
+                width: max-content;
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    right: 0;
+                    bottom: 5px;
+                    width: fluid-text(120px, 145px);
+                    height: 5px;
+                    background: var(--SecondaryColor);
+
+                    z-index: -1;
+
+                    @include mq("499") {
+                        content: none;
+                    }
+                }
+
+                @include mq("499") {
+                    width: 100%;
+                }
             }
         }
         // TextDiv
@@ -80,6 +119,15 @@
             background: var(--whiteColor);
             border-radius: 10px;
             gap: 1rem;
+            grid-template-columns: repeat(3, 1fr);
+
+            @include mq("659") {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            @include mq("499") {
+                grid-template-columns: none;
+            }
 
             label {
                 display: block;
@@ -111,6 +159,7 @@
                 padding: 0 1rem;
                 background: var(--inputColor);
                 border-radius: 3rem;
+                margin-bottom: 1rem;
 
                 input {
                     background: none;
@@ -133,15 +182,20 @@
             .searchOptions {
                 position: absolute;
                 left: 50%;
-                bottom: -0.7rem;
+                bottom: -1rem;
                 column-gap: 0.8rem;
                 justify-content: center;
                 width: max-content;
                 background: var(--gradientColor);
-                padding: 5px 1rem;
+                padding: 8px 1rem;
                 border-radius: 3rem;
                 transform: translateX(-50%);
                 cursor: pointer;
+
+                @include mq("1239") {
+                    bottom: -0.7rem;
+                    padding: 5px 1rem;
+                }
 
                 &:hover {
                     background: var(--PrimaryColor);
@@ -153,7 +207,7 @@
                 }
 
                 span {
-                    font-size: 13px;
+                    font-size: fluid-text(13px, 17px);
                 }
             }
         }
