--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@use "./globals/" as *;
+
 :root {
     --PrimaryColor: #0073a8;
     --SecondaryColor: #10b5cb;
@@ -19,6 +21,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
 }
@@ -28,12 +34,22 @@ li {
 }
 
 .section {
-    padding: 4rem 0 2rem;
+    padding: 6rem 0 4rem;
+
+    @include mq("1239") {
+        padding: 4rem 0 2rem;
+    }
 }
 
 .container {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    width: 80% !important;
+    margin: auto !important;
+
+    @include mq("1239") {
+        width: 100% !important;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+    }
 }
 
 .icon {
